--- a/index.html
+++ b/index.html
@@ -277,34 +277,23 @@
       }, 2300);
     }
 
-    function getRandomShadyWord() {
-      const shadyWords = {
-        "53": "Theft", "47": "CAPTCHA", "54": "Keylogger", "61": "VPN", "48": "Cryptojacking",
-        "55": "Password", "62": "Exploit", "49": "Fraud", "56": "Miner", "63": "Pirate",
-        "57": "Phishing", "64": "Free_Movies", "58": "Spyware", "65": "Murder", "59": "Trojan",
-        "66": "Voyeur", "1": "Gay", "2": "Girls", "67": "Drug", "3": "Prison", "68": "Meth",
-        "4": "Government", "5": "Hack", "69": "Cocaine", "6": "Dating", "7": "Taliban",
-        "10": "Sexist", "8": "Ip_Logger", "9": "Racist", "11": "Homo", "12": "Hate_Crimes",
-        "13": "Taliban_Meetup", "20": "Women", "14": "Alchoholic", "21": "Hot", "15": "KKK",
-        "22": "Tits", "16": "Virus", "23": "Boobs", "30": "Anal", "17": "Penis", "24": "Hentai",
-        "31": "Ejaculation", "18": "Vagina", "25": "Porn", "32": "Fuck", "19": "Sex", "26": "Porno",
-        "33": "Orgasm", "40": "Malware", "27": "MILF", "34": "Penetration", "41": "Ransomware",
-        "28": "Free", "35": "Masturbation", "42": "Adware", "29": "Blowjob", "36": "Genital",
-        "43": "Ransom", "50": "DDoS", "37": "Rape", "44": "Backdoor", "51": "Firewall",
-        "38": "Love", "45": "Bitcoin", "52": "Hack", "60": "Spy", "39": "Ass", "46": "Bot",
-        "100": "Bitch", "101": "Slut", "102": "Cunt", "103": "Asshole", "104": "Dickhead",
-        "105": "Fucker", "106": "Whore", "107": "Prick", "108": "Douche", "109": "Shithead",
-        "110": "Piss", "111": "Twat", "112": "Fag", "113": "Twink", "114": "Cum",
-        "115": "Nipple", "116": "Cocksucker", "117": "Jizz", "118": "Bastard", "119": "Fuckhead",
-        "120": "Clit", "121": "Minge", "122": "Pussy", "123": "Turd", "124": "Scrotum",
-        "125": "Titsucker", "126": "Ballbag", "127": "Fisting", "128": "Blowjobber", "129": "Pisshead",
-        "130": "Rimming", "131": "Smegma", "132": "Fistfuck", "133": "Fucktard", "134": "Cockblock"
-      };
+	function getRandomShadyWord() {
+	  const shadyWords = [
+		"Theft", "CAPTCHA", "Keylogger", "VPN", "Cryptojacking", "Password", "Exploit", "Fraud", "Miner", "Pirate",
+		"Phishing", "Free_Movies", "Spyware", "Murder", "Trojan", "Voyeur", "Gay", "Girls", "Drug", "Prison", "Meth",
+		"Government", "Hack", "Cocaine", "Dating", "Taliban", "Sexist", "Ip_Logger", "Racist", "Homo", "Hate_Crimes",
+		"Taliban_Meetup", "Women", "Alchoholic", "Hot", "KKK", "Tits", "Virus", "Boobs", "Anal", "Penis", "Hentai",
+		"Ejaculation", "Vagina", "Porn", "Fuck", "Sex", "Porno", "Orgasm", "Malware", "MILF", "Penetration", "Ransomware",
+		"Free", "Masturbation", "Adware", "Blowjob", "Genital", "Ransom", "DDoS", "Rape", "Backdoor", "Firewall",
+		"Love", "Bitcoin", "Spy", "Ass", "Bot", "Bitch", "Slut", "Cunt", "Asshole", "Dickhead", "Fucker", "Whore", "Prick",
+		"Douche", "Shithead", "Piss", "Twat", "Fag", "Twink", "Cum", "Nipple", "Cocksucker", "Jizz", "Bastard", "Fuckhead",
+		"Clit", "Minge", "Pussy", "Turd", "Scrotum", "Titsucker", "Ballbag", "Fisting", "Blowjobber", "Pisshead", "Rimming",
+		"Smegma", "Fistfuck", "Fucktard", "Cockblock"
+	  ];
 
-      const keys = Object.keys(shadyWords);
-      const randomKey = keys[Math.floor(Math.random() * keys.length)];
-      return shadyWords[randomKey];
-    }
+	  const randomIndex = Math.floor(Math.random() * shadyWords.length);
+	  return shadyWords[randomIndex];
+	}
 
     function getRandomFileExtension() {
       const fileExtensions = {
