--- a/index.html
+++ b/index.html
@@ -279,16 +279,23 @@
 
 	function getRandomShadyWord() {
 	  const shadyWords = [
-		"Theft", "CAPTCHA", "Keylogger", "VPN", "Cryptojacking", "Password", "Exploit", "Fraud", "Miner", "Pirate",
-		"Phishing", "Free_Movies", "Spyware", "Murder", "Trojan", "Voyeur", "Gay", "Girls", "Drug", "Prison", "Meth",
-		"Government", "Hack", "Cocaine", "Dating", "Taliban", "Sexist", "Ip_Logger", "Racist", "Homo", "Hate_Crimes",
-		"Taliban_Meetup", "Women", "Alchoholic", "Hot", "KKK", "Tits", "Virus", "Boobs", "Anal", "Penis", "Hentai",
-		"Ejaculation", "Vagina", "Porn", "Fuck", "Sex", "Porno", "Orgasm", "Malware", "MILF", "Penetration", "Ransomware",
-		"Free", "Masturbation", "Adware", "Blowjob", "Genital", "Ransom", "DDoS", "Rape", "Backdoor", "Firewall",
-		"Love", "Bitcoin", "Spy", "Ass", "Bot", "Bitch", "Slut", "Cunt", "Asshole", "Dickhead", "Fucker", "Whore", "Prick",
-		"Douche", "Shithead", "Piss", "Twat", "Fag", "Twink", "Cum", "Nipple", "Cocksucker", "Jizz", "Bastard", "Fuckhead",
-		"Clit", "Minge", "Pussy", "Turd", "Scrotum", "Titsucker", "Ballbag", "Fisting", "Blowjobber", "Pisshead", "Rimming",
-		"Smegma", "Fistfuck", "Fucktard", "Cockblock"
+		  "Theft", "CAPTCHA", "Keylogger", "VPN", "Cryptojacking", "Password", "Exploit", "Fraud", "Miner", "Pirate",
+		  "Phishing", "Free_Movies", "Spyware", "Murder", "Trojan", "Voyeur", "Gay", "Girls", "Drug", "Prison",
+		  "Meth", "Government", "Hack", "Cocaine", "Dating", "Taliban", "Sexist", "Ip_Logger", "Racist", "Homo",
+		  "Hate_Crimes", "Taliban_Meetup", "Women", "Alchoholic", "Hot", "KKK", "Tits", "Virus", "Boobs", "Anal",
+		  "Penis", "Hentai", "Ejaculation", "Vagina", "Porn", "Fuck", "Sex", "Porno", "Orgasm", "Malware",
+		  "MILF", "Penetration", "Ransomware", "Free", "Masturbation", "Adware", "Blowjob", "Genital", "Ransom", "DDoS",
+		  "Rape", "Backdoor", "Firewall", "Love", "Bitcoin", "Spy", "Ass", "Bot", "Bitch", "Slut",
+		  "Cunt", "Asshole", "Dickhead", "Fucker", "Whore", "Prick", "Douche", "Shithead", "Piss", "Twat",
+		  "Fag", "Twink", "Cum", "Nipple", "Cocksucker", "Jizz", "Bastard", "Fuckhead", "Clit", "Minge",
+		  "Pussy", "Turd", "Scrotum", "Titsucker", "Ballbag", "Fisting", "Blowjobber", "Pisshead", "Rimming", "Smegma",
+		  "Fistfuck", "Fucktard", "Cockblock", "Rootkit", "Sniffer", "Zero-day", "Keygen", "Cracker", "Botnet", "Breach", "Darkweb", 
+		  "Deepweb", "Onion", "ExploitKit", "RAT", "Keycapture", "Stealer", "Payload", "Injection", "BruteForce", "Warez",
+		  "Heroin", "LSD", "MDMA", "Opium", "Crack", "Cartel", "Dealer", "Smuggling", "Trafficking", "Overdose",
+		  "Assault", "Terror", "Massacre", "Genocide", "Kidnap", "Torture", "Stabbing", "Shootout", "Execution", "Suicide",
+		  "Gore", "BDSM", "Shemale", "Fetish", "Creampie", "Gangbang", "Bukkake", "Deepthroat", "Gloryhole", "Hardcore", 
+		  "Nazi", "Fascist", "WhitePower", "Extremist", "Radical", "Jihad", "ISIS", "AlQaeda", "NeoNazi",
+		  "Scam", "Skimmer", "DarkMarket"
 	  ];
 
 	  const randomIndex = Math.floor(Math.random() * shadyWords.length);
