--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>Shady URL </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -232,167 +232,160 @@
   <p id="result"></p>
   <button id="copyButton" style="display:none; max-width: 30%; width: 100%;">Copy URL</button>
 
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      const button = document.getElementById("shadifyButton");
-      button.addEventListener("click", generateShadyUrl);
+<script>
+	document.addEventListener("DOMContentLoaded", function () {
+		const button = document.getElementById("shadifyButton");
+		button.addEventListener("click", generateShadyUrl);
 
-      const copyButton = document.getElementById("copyButton");
-      copyButton.addEventListener("click", function () {
-        const resultText = document.getElementById("result").innerText;
-        const textArea = document.createElement("textarea");
-        textArea.value = resultText;
-        document.body.appendChild(textArea);
-        textArea.select();
-        document.execCommand("copy");
-        document.body.removeChild(textArea);
-        showNotification("URL copied to clipboard!");
-      });
-    });
+		const copyButton = document.getElementById("copyButton");
+		copyButton.addEventListener("click", function () {
+			const resultText = document.getElementById("result").innerText;
+			const textArea = document.createElement("textarea");
+			textArea.value = resultText;
+			document.body.appendChild(textArea);
+			textArea.select();
+			document.execCommand("copy");
+			document.body.removeChild(textArea);
+			showNotification("URL copied to clipboard!");
+		});
+	});
 
-    function showNotification(message) {
-      let formattedMessage = message.replace(/\n/g, '<br>').replace(/\[(H|P|N|Q)\]/g, match => 
-        `<span class="notification-key" data-key="${match}">${match}</span>`
-      );
+	function showNotification(message) {
+		const notification = document.getElementById('notification');
+		notification.querySelector('p').textContent = message;
+		notification.style.display = 'block';
+		notification.style.animation = 'fadeIn 0.5s ease-in-out';
 
-      const discountPercentMatch = message.match(/Discount percent is (\d+)%/);
-      if (discountPercentMatch) {
-        const discountPercent = discountPercentMatch[1];
-        formattedMessage = formattedMessage.replace(
-          `Discount percent is ${discountPercent}%`, 
-          `<span class="discount-highlight">Discount percent is <b>${discountPercent}%</b></span>`
-        );
-      }
-
-      const notification = document.getElementById('notification');
-      notification.querySelector('p').innerHTML = formattedMessage;
-      notification.style.display = 'block';
-      notification.style.animation = 'fadeIn 0.5s ease-in-out';
-
-      setTimeout(() => {
-        notification.style.animation = 'fadeOut 0.5s ease-in-out';
-        setTimeout(() => {
-          notification.style.display = 'none';
-        }, 500);
-      }, 2300);
-    }
+		setTimeout(() => {
+			notification.style.animation = 'fadeOut 0.5s ease-in-out';
+			setTimeout(() => {
+				notification.style.display = 'none';
+			}, 500);
+		}, 2300);
+	}
 
 	function getRandomShadyWord() {
-	  const shadyWords = [
-		  "Theft", "CAPTCHA", "Keylogger", "VPN", "Cryptojacking", "Password", "Exploit", "Fraud", "Miner", "Pirate",
-		  "Phishing", "Free_Movies", "Spyware", "Murder", "Trojan", "Voyeur", "Gay", "Girls", "Drug", "Prison",
-		  "Meth", "Government", "Hack", "Cocaine", "Dating", "Taliban", "Sexist", "Ip_Logger", "Racist", "Homo",
-		  "Hate_Crimes", "Taliban_Meetup", "Women", "Alchoholic", "Hot", "KKK", "Tits", "Virus", "Boobs", "Anal",
-		  "Penis", "Hentai", "Ejaculation", "Vagina", "Porn", "Fuck", "Sex", "Porno", "Orgasm", "Malware",
-		  "MILF", "Penetration", "Ransomware", "Free", "Masturbation", "Adware", "Blowjob", "Genital", "Ransom", "DDoS",
-		  "Rape", "Backdoor", "Firewall", "Love", "Bitcoin", "Spy", "Ass", "Bot", "Bitch", "Slut",
-		  "Cunt", "Asshole", "Dickhead", "Fucker", "Whore", "Prick", "Douche", "Shithead", "Piss", "Twat",
-		  "Fag", "Twink", "Cum", "Nipple", "Cocksucker", "Jizz", "Bastard", "Fuckhead", "Clit", "Minge",
-		  "Pussy", "Turd", "Scrotum", "Titsucker", "Ballbag", "Fisting", "Blowjobber", "Pisshead", "Rimming", "Smegma",
-		  "Fistfuck", "Fucktard", "Cockblock", "Rootkit", "Sniffer", "Zero-day", "Keygen", "Cracker", "Botnet", "Breach", "Darkweb", 
-		  "Deepweb", "Onion", "ExploitKit", "RAT", "Keycapture", "Stealer", "Payload", "Injection", "BruteForce", "Warez",
-		  "Heroin", "LSD", "MDMA", "Opium", "Crack", "Cartel", "Dealer", "Smuggling", "Trafficking", "Overdose",
-		  "Assault", "Terror", "Massacre", "Genocide", "Kidnap", "Torture", "Stabbing", "Shootout", "Execution", "Suicide",
-		  "Gore", "BDSM", "Shemale", "Fetish", "Creampie", "Gangbang", "Bukkake", "Deepthroat", "Gloryhole", "Hardcore", 
-		  "Nazi", "Fascist", "WhitePower", "Extremist", "Radical", "Jihad", "ISIS", "AlQaeda", "NeoNazi",
-		  "Scam", "Skimmer", "DarkMarket"
-	  ];
+		const shadyWords = [
+			"Theft", "CAPTCHA", "Keylogger", "VPN", "Cryptojacking", "Password", "Exploit", "Fraud", "Miner", "Pirate",
+			"Phishing", "Free_Movies", "Spyware", "Murder", "Trojan", "Voyeur", "Gay", "Girls", "Drug", "Prison",
+			"Meth", "Government", "Hack", "Cocaine", "Dating", "Taliban", "Sexist", "Ip_Logger", "Racist", "Homo",
+			"Hate_Crimes", "Taliban_Meetup", "Cumslut", "Alchoholic", "Hot", "KKK", "Tits", "Virus", "Boobs", "Anal",
+			"Penis", "Hentai", "Ejaculation", "Vagina", "Porn", "Fuck", "Sex", "Porno", "Orgasm", "Malware",
+			"MILF", "Penetration", "Ransomware", "Free", "Masturbation", "Adware", "Blowjob", "Genital", "Ransom", "DDoS",
+			"Rape", "Backdoor", "Firewall", "Love", "Bitcoin", "Spy", "Ass", "Bot", "Bitch", "Slut",
+			"Cunt", "Asshole", "Dickhead", "Fucker", "Whore", "Prick", "Douche", "Shithead", "Piss", "Twat",
+			"Fag", "Twink", "Cum", "Nipple", "Cocksucker", "Jizz", "Bastard", "Fuckhead", "Clit", "Minge",
+			"Pussy", "Turd", "Scrotum", "Titsucker", "Ballbag", "Fisting", "Blowjobber", "Pisshead", "Rimming", "Smegma",
+			"Fistfuck", "Fucktard", "Cockblock", "Rootkit", "Sniffer", "Zero-day", "Keygen", "Cracker", "Botnet", "Breach", "Darkweb", 
+			"Deepweb", "Onion", "ExploitKit", "RAT", "Keycapture", "Stealer", "Payload", "Injection", "BruteForce", "Warez",
+			"Heroin", "LSD", "MDMA", "Opium", "Crack", "Cartel", "Dealer", "Smuggling", "Trafficking", "Overdose",
+			"Assault", "Terror", "Massacre", "Genocide", "Kidnap", "Torture", "Stabbing", "Shootout", "Execution", "Suicide",
+			"Gore", "BDSM", "Shemale", "Fetish", "Creampie", "Gangbang", "Bukkake", "Deepthroat", "Gloryhole", "Hardcore", 
+			"Nazi", "Fascist", "WhitePower", "Extremist", "Radical", "Jihad", "ISIS", "AlQaeda", "NeoNazi",
+			"Scam", "Skimmer", "DarkMarket"
+		];
 
-	  const randomIndex = Math.floor(Math.random() * shadyWords.length);
-	  let word = shadyWords[randomIndex];
+		const randomIndex = Math.floor(Math.random() * shadyWords.length);
+		let word = shadyWords[randomIndex];
 
-	  if (Math.random() < 0.2) {
-		word = word.toUpperCase();
-	  } else if (Math.random() < 0.2) {
-		word = word.toLowerCase();
-	  } else if (Math.random() < 0.4) {
-		word = word.split('').map(char => Math.random() < 0.25 ? char.toUpperCase() : char).join('');
-	  } else if (Math.random() < 0.2) {
-		const replaceDict = { 'a': '4', 'o': '0', 'i': '1', 'e': '3', 's': '5' };
-		word = word.split('').map(char => replaceDict[char] || char).join('');
-	  } else if (Math.random() < 0.25) {
-		word = word.split('').map(char => {
-		  const replaceChars = { 'a': '4', 'o': '0', 'i': '1', 'e': '3', 's': '5', 't': '7', 'l': '1' };
-		  return Math.random() < 0.1 ? replaceChars[char] || char : char;
-		}).join('');
-	  }
-
-	  return word;
-	}
-
-
-    function getRandomFileExtension() {
-      const fileExtensions = {
-        "10": "7z", "2": "exe", "15": "cmd", "3": "zip", "11": "jpg", "4": "rar",
-        "16": "msi", "5": "doc", "12": "jpeg", "6": "docx", "13": "bat", "7": "pdf",
-        "8": "img", "14": "jar", "1": "apk", "9": "gz"
-      };
-
-      const keys = Object.keys(fileExtensions);
-      const randomKey = keys[Math.floor(Math.random() * keys.length)];
-      return fileExtensions[randomKey];
-    }
-	
-	function generateShadyUrl() {
-	  let originalUrl = document.getElementById('originalUrl').value;
-	  const randomString = document.getElementById('randomString').checked;
-	  const fileExtension = document.getElementById('fileExtension').checked;
-	  let numberOfWords = document.getElementById('numberOfWords').value;
-
-	  numberOfWords = numberOfWords / 2;
-	  let shadyUrl = "";
-	  let newUrl = "";
-	  let overflowUrl = "";
-
-	  if (randomString) {
-		let randomNumbers = Math.floor(Math.random() * 100000000);
-		shadyUrl += `${randomNumbers}_`;
-	  }
-
-	  for (let i = 0; i < numberOfWords; i++) {
-		const word = getRandomShadyWord();
-		const newWord = getRandomShadyWord();
-
-		if (shadyUrl.length + word.length + 1 <= 30) {
-		  shadyUrl += `${word}_`;
-		  newUrl += `${newWord}_`;
-		} else {
-		  overflowUrl += `_${word}`;
+		if (Math.random() < 0.15) {
+		  word = word.toUpperCase();
 		}
-	  }
 
-	  shadyUrl = shadyUrl.replace(/_$/, '');
+		if (Math.random() < 0.15) {
+		  word = word.toLowerCase();
+		}
 
-	  if (fileExtension) {
-		const extension = getRandomFileExtension();
-		shadyUrl += `_${extension}`;
-	  }
+		if (Math.random() < 0.15) {
+		  word = word.split('').map(char => Math.random() < 0.25 ? char.toUpperCase() : char).join('');
+		}
 
-	  while (shadyUrl.length > 29) {
-		const shadyUrlParts = shadyUrl.split('_');
-		shadyUrl = shadyUrlParts.slice(0, -1).join('_');
-	  }
+		if (Math.random() < 0.15) {
+		  const replaceDict = { 'a': '4', 'o': '0', 'i': '1', 'e': '3', 's': '5' };
+		  word = word.split('').map(char => replaceDict[char] || char).join('');
+		}
 
-	  const isgdAPI = 'https://is.gd/create.php';
-	  const params = new URLSearchParams();
-	  params.append('format', 'simple');
-	  params.append('url', originalUrl);
-	  params.append('shorturl', `_${shadyUrl}`);
+		if (Math.random() < 0.15) {
+		  word = word.split('').map(char => {
+			const replaceChars = { 'a': '4', 'o': '0', 'i': '1', 'e': '3', 's': '5', 't': '7', 'l': '1' };
+			return Math.random() < 0.1 ? replaceChars[char] || char : char;
+		  }).join('');
+		}
 
-	  fetch(`${isgdAPI}?${params.toString()}`, { mode: 'no-cors' })
-		.then(response => response.text())
-		.then(() => {
-		  const resultElement = document.getElementById('result');
-		  const username = overflowUrl ? `#${overflowUrl}` : '';
-		  resultElement.innerHTML = `<a href="https://${newUrl}@is.gd/_${shadyUrl}${username}" target="_blank">https://${newUrl}@is.gd/_${shadyUrl}${username}</a>`;
-		  document.getElementById("copyButton").style.display = 'inline-block';
-		})
-		.catch(error => {
-		  console.error('Error:', error);
-		});
+		return word;
 	}
 
-  </script>
+	function getRandomFileExtension() {
+		const fileExtensions = {
+			"10": "7z", "2": "exe", "15": "cmd", "3": "zip", "11": "jpg", "4": "rar",
+			"16": "msi", "5": "doc", "12": "jpeg", "6": "docx", "13": "bat", "7": "pdf",
+			"8": "img", "14": "jar", "1": "apk", "9": "gz"
+		};
+
+		const keys = Object.keys(fileExtensions);
+		const randomKey = keys[Math.floor(Math.random() * keys.length)];
+		return fileExtensions[randomKey];
+	}
+
+	function generateShadyUrl() {
+		let originalUrl = document.getElementById('originalUrl').value;
+		const randomString = document.getElementById('randomString').checked;
+		const fileExtension = document.getElementById('fileExtension').checked;
+		let numberOfWords = document.getElementById('numberOfWords').value;
+
+		numberOfWords = numberOfWords / 2;
+		let shadyUrl = "";
+		let newUrl = "";
+		let overflowUrl = "";
+
+		if (randomString) {
+			let randomNumbers = Math.floor(Math.random() * 100000000);
+			shadyUrl += `${randomNumbers}_`;
+		}
+
+		for (let i = 0; i < numberOfWords; i++) {
+			const word = getRandomShadyWord();
+			const newWord = getRandomShadyWord();
+
+			if (shadyUrl.length + word.length + 1 <= 30) {
+				shadyUrl += `${word}_`;
+				newUrl += `${newWord}_`;
+			} else {
+				overflowUrl += `_${word}`;
+			}
+		}
+
+		shadyUrl = shadyUrl.replace(/_$/, '');
+
+		if (fileExtension) {
+			const extension = getRandomFileExtension();
+			shadyUrl += `_${extension}`;
+		}
+
+		while (shadyUrl.length > 29) {
+			const shadyUrlParts = shadyUrl.split('_');
+			shadyUrl = shadyUrlParts.slice(0, -1).join('_');
+		}
+
+		const isgdAPI = 'https://is.gd/create.php';
+		const params = new URLSearchParams();
+		params.append('format', 'simple');
+		params.append('url', originalUrl);
+		params.append('shorturl', `_${shadyUrl}`);
+
+		fetch(`${isgdAPI}?${params.toString()}`, { mode: 'no-cors' })
+			.then(response => response.text())
+			.then(() => {
+				const resultElement = document.getElementById('result');
+				const username = overflowUrl ? `#${overflowUrl}` : '';
+				resultElement.innerHTML = `<a href="https://${newUrl}@is.gd/_${shadyUrl}${username}" target="_blank">https://${newUrl}@is.gd/_${shadyUrl}${username}</a>`;
+				document.getElementById("copyButton").style.display = 'inline-block';
+			})
+			.catch(error => {
+				console.error('Error:', error);
+			});
+	}
+</script>
 
 </body>
 </html>
