--- a/index.html
+++ b/index.html
@@ -207,6 +207,24 @@
   z-index: 10000000;
   animation: fadeIn .5s ease-in-out,fadeOut .5s ease-in-out 1s
 }
+#static {
+  position: fixed;
+  top: 20px;
+  right: 0;
+  background-color: #a13513;
+  color: white;
+  font-family: 'Roboto Mono', monospace;
+  font-weight: bold;
+  cursor: pointer;
+  padding: 10px 20px;
+  z-index: 1000;
+  clip-path: polygon(20px 0, 100% 0, 100% 100%, 20px 100%, 0 50%);
+  transition: background-color 0.3s ease;
+}
+
+#static:hover {
+  background-color: #E64A19;
+}
   </style>
 </head>
 <body>
@@ -217,6 +235,9 @@
 	<div id="notification" class="notification">
 		<p></p>
 	</div>
+<div id="static" onclick="window.location.href='/masker'">
+  Masker (static)
+</div>
     <label for="randomString">Add random string at the start:</label>
     <input type="checkbox" id="randomString"><br>
 
