--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 	<div id="notification" class="notification">
 		<p></p>
 	</div>
-<div id="static" onclick="window.location.href='/masker'">
+<div id="static" onclick="window.location.href='masker'">
   Masker (static)
 </div>
     <label for="randomString">Add random string at the start:</label>
